sources/docker/0.3.5/README.md
# Rabbit 인증 서버 0.3.5

> 테스트 버전입니다. 원본 사이트의 `이미지 처리 중인 회차입니다. 잠시 후 다시 확인해주세요.` 문구를 감지하면 공개 HTTPS에 올려 둔 고정 안내 PNG 한 장을 반환하는 기능을 먼저 검증합니다.

확장앱의 **외부 인증 서버 사용**을 켰을 때만 사용하는 선택 기능입니다. 초기값은 OFF입니다.
사이트의 실제 브라우저에서 회차 인증과 **이미지 주소·순서·개수**를 확인하고 앱에 반환합니다.
이미지 파일은 앱/스와요미 서버가 사이트에서 직접 다운로드합니다. 이 서버는 이미지 중계·다운로드 저장소가 아닙니다.
원본 사이트가 이미지 처리 중이라고 명시한 회차는 오래 기다리지 않고 고정 안내 이미지 1장의 주소를 반환합니다.
소설은 표시된 본문을 기존 확장앱의 페이지 렌더러에 전달합니다. 잠긴/유료 회차의 접근 권한을 우회하지 않습니다.

## 설치 전

- Docker를 지원하는 x86-64 NAS/Linux 환경이 필요합니다. ARM NAS는 이 배포의 검증 대상이 아닙니다.
- 권장 여유 메모리 2GB 이상. 동시에 인증할 브라우저는 기본 2개입니다.
- 기본 포트는 호스트·컨테이너 모두 **9870**입니다. 포트와 접속 키 등은 `docker-compose.yml` 한 파일에서 수정합니다. `.env` 파일은 필요하지 않습니다.
- 기본 구성은 GitHub Container Registry(GHCR)의 공개 안정 이미지를 사용하며, 프로젝트를 다시 실행하면 최신 안정 이미지를 확인합니다.
- 기존 `rabbit-auth-lab` 테스트판과 새 서버는 별개입니다. 기존 볼륨은 새 서버로 자동 이전하지 않습니다.
- 공식 Docker 문서의 [컨테이너 네트워크 설명](https://docs.docker.com/compose/how-tos/networking/)도 참고하세요.

## Synology Container Manager

1. ZIP을 NAS의 원하는 폴더에 압축 해제합니다. 일반 설치와 업데이트에는 `docker-compose.yml`을 사용합니다. 함께 들어 있는 소스와 `docker-compose.build.yml`은 GHCR를 사용할 수 없을 때를 위한 로컬 빌드 예비 구성입니다.
2. Container Manager → 프로젝트 → 생성에서 이 폴더의 **`docker-compose.yml`**을 선택합니다. YAML 구성 화면에서 다음 항목만 확인·수정합니다. `.env` 생성이나 별도 파일 편집은 필요하지 않습니다.
   - **`SERVER_KEY: "replace-with-your-key"`**: 예제 문구를 본인이 정한 **4자 이상**의 접속 키로 바꿉니다. 숫자만 4자리도 가능하고, 더 긴 키도 가능합니다. 앞자리 0이 없어지지 않도록 따옴표를 유지하세요. NAS/사이트 계정 비밀번호는 사용하지 마세요.
   - **`ports`의 `"9870:9870"`**: 기본 그대로 사용합니다. 다른 접속 포트가 필요하면 왼쪽 숫자만 수정합니다. 예: `"9871:9870"` → 접속 주소 끝에 `:9871`을 사용합니다.
   - **`ALLOWED_HOSTS: "*"`**: 그대로 둡니다. 사용자마다 다른 NAS/PC 이름, Tailscale 이름, LAN/Tailscale IP를 미리 등록할 필요가 없습니다. 접속 키 검증은 유지됩니다. `*`의 따옴표를 지우지 마세요.
   - **`BROWSER_SANDBOX: "false"`**: 기본 그대로 사용합니다. 검증한 Synology NAS에서 `true`로 브라우저 시작이 실패한 점을 반영했습니다. 샌드박스를 지원하는 다른 환경에서는 원하면 `"true"`로 바꿀 수 있습니다.
3. 저장한 설정으로 프로젝트를 빌드·시작합니다. `pull_policy: always`에 따라 공개 이미지를 확인하고 내려받습니다.
4. 컨테이너가 `healthy`가 되었는지 확인합니다. 최초 설치는 브라우저가 포함된 이미지 다운로드 때문에 오래 걸릴 수 있습니다.
5. PC에서 `http://NAS의주소:9870`을 엽니다. 사용자 이름은 **lab**, 비밀번호는 YAML에 정한 **SERVER_KEY**입니다.

기본값은 암호 사용입니다. `ALLOWED_HOSTS: "*"`와 `SERVER_AUTH: "none"`을 함께 사용하면 시작을 거부합니다.
비밀번호 없는 로컬 테스트가 반드시 필요하면 `SERVER_AUTH: "none"`과 함께 `ALLOWED_HOSTS`를 실제 사용할 이름/IP의 명시적인 목록으로 제한해야 합니다. 비밀번호를 끄면 접근 가능한 사람 모두 브라우저와 작업을 조작할 수 있으므로 외부 공개하지 마세요.

SSH/터미널로 설치할 때는 해당 폴더에서:

```sh
docker compose -f docker-compose.yml pull
docker compose -f docker-compose.yml up -d
docker compose -f docker-compose.yml logs --tail=100
```

Synology에서 `docker: command not found`라면 `/var/packages/ContainerManager/target/usr/bin/docker` 경로를 사용하세요.
이 패키지는 CPU CFS/PIDs 제한이나 커스텀 seccomp 프로필을 강제하지 않습니다. `docker-compose.yml` 하나만 제공합니다. 예전 `compose.yaml`과 같은 폴더에 섞으면 예전 파일이 선택될 수 있으므로, 새 폴더에서 설치하거나 프로젝트에서 사용할 파일을 명시적으로 선택하세요.
포트를 `${SERVER_PORT}`로 치환하지 않으므로 DSM 실행 환경에 같은 이름의 변수가 있어도 지정한 포트가 바뀌지 않습니다.

## 보안 안내

`BROWSER_SANDBOX: "false"`는 브라우저의 격리를 줄이는 설정이지, 외부 접속을 차단하는 설정이 아닙니다. 이 ZIP은 `9870:9870`으로 호스트 인터페이스에 포트를 공개하며, 실제 외부 접속 가능 여부는 방화벽·공유기·프록시 설정에 따라 달라집니다.
짧은 키는 추측하기 쉽고 샌드박스 비활성화는 악성 페이지에 대한 보호를 약화시킵니다. 이 기본 구성은 신뢰된 LAN/Tailscale 안에서 사용하는 것을 권장합니다. 인터넷 공개에는 별도의 접근 통제·HTTPS 등 보안 구성이 필요하며, 이 ZIP에 포함되어 있지 않습니다.

## 확장앱 설정

각 소스 설정에서 다음을 입력합니다.

1. **외부 인증 서버 사용 → ON**
2. **서버 주소**: `http://NAS의주소:9870` (끝에 API 경로를 붙이지 않음)
3. **접속 키**: YAML에 정한 `SERVER_KEY`. `SERVER_AUTH: "none"`이면 비워 둡니다.
4. **연결 확인**: 정상 표시 후 회차를 엽니다.

- Android/iOS 앱에서는 **기기에서 접근되는** LAN/Tailscale 주소를 사용합니다.
- Suwayomi에서는 **Suwayomi 컨테이너에서 접근되는** 주소여야 합니다. PC에서 `nas`가 열린다고 컨테이너에서도 열리는 것은 아닙니다.
- 가장 단순한 방법은 NAS LAN IP를 사용하는 것입니다. 컨테이너의 방화벽/호스트 포트 접근 허용도 확인합니다.
- 두 컨테이너를 같은 Docker 네트워크에 연결하면 `http://rabbit-auth-server:9870`을 사용할 수 있습니다. 이 이름은 PC/휴대폰용 주소가 아닙니다.
- 이 YAML은 특정 Tailscale IP에 포트를 바인딩하지 않습니다. Tailscale userspace 수신 전달 방식에 따라 접속 경로를 별도 확인해야 합니다.
- `ALLOWED_HOSTS: "*"`는 들어온 요청의 목적지 이름/IP를 제한하지 않는다는 뜻입니다. `10.x.x.x`, `192.168.x.x`, Tailscale `100.x.x.x` 등을 특정 대역으로 제한하지 않습니다. DNS 등록·Tailscale 연결·방화벽·라우팅을 자동 설정하는 기능은 아닙니다. 클라이언트가 해당 이름을 해석하고 서버에 도달할 수 있어야 합니다.
- 고급 설정으로 목적지 이름을 제한하고 싶을 때만 `*` 대신 쉼표로 구분한 이름/IP 목록을 적습니다. 연결하는 사용자 기기의 IP 목록이 아니라 서버 접속 주소의 이름/IP 목록입니다. 일반 배포 설치에서는 수정할 필요가 없습니다.
- HTTP 사용 시 접속 키가 평문으로 전송됩니다. 신뢰된 LAN 또는 Tailscale에서 사용하거나, 외부 공개 시 별도의 HTTPS·접근 통제를 구성해야 합니다.

OFF로 되돌리면 이후 회차 요청은 기존 확장 엔진을 사용하고 서버 연결 확인도 실행하지 않습니다.
소스 ID, 라이브러리, 기존 다운로드, 읽음 상태를 변경하거나 삭제하지 않습니다.
서버 주소/키 설정은 재입력을 줄이기 위해 저장되지만 OFF 동안 사용하지 않습니다. 삭제하려면 해당 설정을 직접 비워 주세요.

## 동작과 제한

이번 외부 인증 기능은 **선택형 시험 기능**입니다. 모든 사이트/기기의 정상 동작을 보증하는 배포가 아닙니다.
검증 NAS에서 블랙툰은 OFF/ON 회차 목록과 첫·중간·마지막 이미지 다운로드를 확인했습니다.
뉴토끼 웹툰/만화는 주소 확보와 자동 종료는 확인했지만, 현재 `aws-cdn9.site` 이미지 직접 요청에서 연결 종료가 재현됐습니다.
따라서 뉴토끼의 실제 열람 성공까지 검증된 것은 아닙니다. 이 서버는 해당 오류를 숨기거나 이미지 중계로 바꾸지 않습니다.
Android/iOS 실기기 설치·열람은 이번 자동 검증에 포함되지 않았습니다.

- 요청마다 별도 브라우저 컨텍스트를 사용합니다. A 작업을 닫거나 B 소스를 열어도 다른 진행 작업을 취소하지 않습니다.
- 동시에 최대 2개를 처리하며 초과 요청은 **회차 단위** 대기열에 들어갑니다. 300회차 다운로드 전체를 한 작업으로 묶지 않습니다.
- 주소를 확보한 작업의 브라우저는 닫습니다. 주소 결과는 전달/취소 또는 짧은 유휴 만료 후 정리됩니다.
- 서버는 실제 이미지 다운로드 성공 여부·다운로드 진행률을 알 수 없습니다. 다운로드 도중 URL이 만료되거나 앱 IP에서 차단되면 다시 회차 주소를 확보해야 할 수 있습니다.
- 사이트별 쿠키를 별도로 저장할 수 있지만 인증 만료 시각을 임의로 연장할 수는 없습니다. 403·타임아웃을 모두 인증 만료로 간주하지 않습니다.
- 사이트가 실제 사용자 확인을 요구하면 서버 화면에서 해당 작업의 **브라우저 보기**로 직접 확인해야 합니다. 모든 사이트의 무인 인증 성공을 보장하지 않습니다.
- 신호등은 대상이 아닙니다. Jjaptoon은 현재 사이트 접속 장애로 실사이트 검증이 불가능합니다.
- 브라우저 화면은 서버를 함께 쓰는 신뢰된 사용자에게 공유됩니다. 사이트 계정 비밀번호·결제 정보·개인 정보를 입력하지 마세요.
- 지원 도메인 계열 안에서는 확장앱이 전달한 최신 주소를 사용합니다. 완전히 다른 도메인 계열로 이전하면 서버 어댑터 업데이트가 필요합니다.

## 점검

- 401: 서버 접속 키 불일치.
- `untrusted_host`: 예전 제한 설정을 유지 중이면 새 배포의 `ALLOWED_HOSTS: "*"`로 변경한 뒤 빌드·재생성합니다. 고급 설정으로 명시적인 제한 목록을 쓰는 경우에는 접속 이름/IP를 추가합니다. 잘못된 Host 형식은 `*`에서도 거부합니다.
- DNS 이름을 찾지 못함/연결 시간 초과: 허용 목록 문제가 아닙니다. 요청을 보내는 앱 또는 Suwayomi 컨테이너의 이름 해석·Tailscale 경로·방화벽을 확인하세요.
- `browser_not_ready`: 컨테이너 로그에서 브라우저 시작 실패/메모리/샌드박스 지원 확인.
- `manual_viewer_confirmation_required`: 회차의 사이트 인증·이미지 표시 상태를 확인. 무한 재시도하지 마세요.
- `unsupported_site`/`chapter_path_not_allowed`: 확장앱이 전달한 주소 계열/회차 경로와 서버 지원 범위 불일치.
- 서버 준비 완료는 사이트 인증 성공 또는 실제 이미지 다운로드 성공을 의미하지 않습니다.

## 데이터 및 업데이트

`browser-data:/data`는 Docker **이름 있는 볼륨**이며 정상적인 설정입니다. 서버 쿠키 상태만 저장하며 이미지 파일은 저장하지 않습니다.
0.3.0/0.3.1에서 업데이트한다면 기존 접속 키만 새 YAML의 `SERVER_KEY`에 옮깁니다. 기존 접속 포트는 `ports`의 왼쪽 숫자에 적습니다. `ALLOWED_HOSTS`는 새 기본값 `"*"`로 두면 이름/IP를 일일이 옮길 필요가 없습니다. 새 구성은 `.env`를 참조하지 않습니다.
0.3.5부터는 기본 `docker-compose.yml`에 `image: ghcr.io/wankyo83/rabbit-auth-server:stable`과 `pull_policy: always`가 들어 있습니다. 기존 프로젝트에서 **빌드/재생성**을 실행하거나 아래 명령을 실행하면 최신 안정 이미지를 확인해 교체합니다.

```sh
docker compose -f docker-compose.yml pull
docker compose -f docker-compose.yml up -d
```

단순 중지 후 시작이나 컨테이너 재시작만으로는 새 이미지를 확인하지 않을 수 있습니다. 기존 프로젝트 이름과 압축을 푼 폴더 위치를 유지해야 `browser-data` 볼륨의 쿠키를 계속 사용합니다. 업데이트 전에 기존 `SERVER_KEY`, 포트 및 사용자 설정을 새 YAML에 그대로 옮기세요.

특정 버전으로 되돌려야 하면 `docker-compose.yml`의 이미지 태그 `stable`을 원하는 배포 버전(예: `0.3.5`)으로 바꾸고 `pull`과 `up -d`를 다시 실행합니다. GHCR 접속이 불가능한 환경에서는 동일 폴더의 `docker-compose.build.yml`에 설정을 옮긴 뒤 `docker compose -f docker-compose.build.yml up -d --build`로 로컬 빌드할 수 있습니다.

Container Manager에서도 기존 프로젝트의 빌드·재생성을 실행해야 합니다. 예전 `compose.yaml`을 사용할 파일로 선택하지 마세요. 프로젝트 이름이 달라지면 별도 볼륨이 생성되어 기존 쿠키가 자동 이전되지 않습니다.
`down -v`는 데이터 볼륨까지 삭제하므로 백업 없이 실행하지 마세요.
일반적인 중지는 `docker compose -f docker-compose.yml stop`입니다.

Windows 실행 프로그램은 별도의 Windows x64 ZIP으로 제공합니다. Docker ZIP에는 EXE와 Windows용 실행 환경이 포함되어 있지 않습니다.
